// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maps state and dispatch to props 1`] = `
Array [
  Object {
    "id": "8344bc71dec1e99b7e1d01e",
    "jmeno": "Slavěna",
    "kategorie": Object {
      "id": "5a587e1b051c181132cf83d9",
      "pohlavi": "žena",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 39,
        "min": 18,
      },
    },
    "narozeni": Object {
      "den": 13,
      "mesic": 8,
      "rok": 2001,
    },
    "prijmeni": "Kyselová",
    "startCislo": 15,
  },
]
`;

exports[`maps state and dispatch to props 2`] = `
Array [
  Object {
    "id": "5a09b1fd371dec1e99b7e1c9",
    "jmeno": "Roman",
    "kategorie": Object {
      "id": "5a587e1b051c181132cf83d7",
      "pohlavi": "muž",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 150,
        "min": 60,
      },
    },
    "narozeni": Object {
      "rok": 1956,
    },
    "prijmeni": "Balabák",
    "startCislo": 15,
  },
  Object {
    "id": "7a09b1fd371dec1e99b7e142",
    "jmeno": "Hana",
    "kategorie": Object {
      "id": "5a587e1b051c181132cf83d9",
      "pohlavi": "žena",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 39,
        "min": 18,
      },
    },
    "narozeni": Object {
      "den": 25,
      "mesic": 7,
      "rok": 1999,
    },
    "prijmeni": "Zralá",
    "startCislo": 11,
  },
]
`;
